# prometheus

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
content/locales/en/: ui.json
content/locales/pt-BR/: ui.json
content/locales/pt-BR/modules/kinematics/: kinematics-01-what-is-motion.json  kinematics-02-position-and-reference.json  kinematics-03-velocity.json  kinematics-04-average-velocity.json  kinematics-05-uniform-motion.json  kinematics-06-acceleration.json  kinematics-07-uniformly-accelerated-motion.json  kinematics-08-free-fall.json  module.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ExerciseCard.tsx  Layout.tsx  LessonBlock.tsx  LessonCard.tsx  ProgressBar.tsx  TutorButton.tsx
src/hooks/: useI18n.ts
src/pages/: Lesson.tsx  ModuleComplete.tsx  ModuleOverview.tsx  Settings.tsx  Welcome.tsx
src/services/: contentLoader.ts  i18n.ts  progress.ts
src/styles/: index.css
src/types/: content.ts  i18n.ts
