[package]
name = "prometheus"
version = "0.1.0"
description = "Offline-first physics learning platform"
authors = ["Merlin <aldenmerlin@gmail.com>"]
edition = "2021"

[lib]
name = "prometheus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
